fix: wrong background color

--- a/webapp/pages/presentation/konzernbilanz/aktiva/style.scss
+++ b/webapp/pages/presentation/konzernbilanz/aktiva/style.scss
@@ -317,7 +317,7 @@ tr{
 
     .colored-row {
         background-color: #9ac440;
-        color: white;
+        color: #f4f4f5;
         font-weight: 700;
         margin-top: 30px;
 
